2009-11-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* README:
	* src/disp_holder.cpp:
	* src/log_player.cpp:
	* src/log_player.h:
	* src/main_window.cpp:
	* src/src.pro:
	- fixed link target in Windows environment.
	- fixed defects in buffering mode.
	- disabled disp buffer in non-buffering mode.

2009-11-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/options.cpp:
	* src/src.pro:
	- fixed help message.
	- fixed link option for Windows.

	* NEWS:
	* README:
	- wrote short descriptions about new rcssmonitor.

	* src/log_player.cpp:
	* src/main_window.cpp:
	* src/main_window.h:
	* src/options.cpp:
	- added a help dialog for short cut keys.
	- added status bar messages.

	* src/log_player.cpp:
	* src/log_player.h:
	* rcssmonitor.pro:
	* src/Makefile.am:
	* src/disp_holder.cpp:
	* src/disp_holder.h:
	* src/main_window.cpp:
	* src/main_window.h:
	* src/options.cpp:
	* src/options.h:
	* src/src.pro:
	- implemented buffering mode.
	- fixed qmake project file.

2009-11-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/options.cpp:
	* src/player_painter.cpp:
	* src/player_type_dialog.cpp:
	- added minimum catch area information.

2009-11-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/config_dialog.cpp:
	* src/config_dialog.h:
	- added color cancel button.

	* src/Makefile.am:
	* src/config_dialog.cpp:
	* src/config_dialog.h:
	* src/disp_holder.cpp:
	* src/field_canvas.cpp:
	* src/main_window.cpp:
	* src/main_window.h:
	* src/options.cpp:
	* src/options.h:
	- supported DrawInfoT (tentative).
	- added the menu to toggle full screen.

	* src/draw_info_painter.cpp:
	* src/draw_info_painter.h:
	* src/angle_deg.h:
	* src/ball_painter.h:
	* src/circle_2d.h:
	* src/config_dialog.cpp:
	* src/config_dialog.h:
	* src/disp_holder.cpp:
	* src/disp_holder.h:
	* src/field_canvas.cpp:
	* src/mouse_state.h:
	* src/options.cpp:
	* src/options.h:
	* src/player_painter.cpp:
	* src/player_painter.h:
	* src/player_type_dialog.h: